--- a/.bazelrc
+++ b/.bazelrc
@@ -119,15 +119,19 @@ common --@aspect_rules_py//py:interpreter_version=3.11.9
 
 # Reduce payload size of uploaded build event stream by eliminating duplicate
 # file references
---nolegacy_important_outputs
+common --nolegacy_important_outputs
+# For a more detailed timing profile
+common --noslim_profile
+common --experimental_profile_include_target_label
+common --experimental_profile_include_primary_output 
 
 # Build Event Server
 # ==================
-# build --bes_results_url=https://app.buildbuddy.io/invocation/
-# build --bes_backend=grpcs://remote.buildbuddy.io
+build --bes_results_url=https://app.buildbuddy.io/invocation/
+build --bes_backend=grpcs://remote.buildbuddy.io
 # build --remote_cache=grpcs://remote.buildbuddy.io
-# build --noremote_upload_local_results # Uploads logs & artifacts without writing to cache
-# build --remote_timeout=3600
+build --noremote_upload_local_results # Uploads logs & artifacts without writing to cache
+build --remote_timeout=3600
 
 # Remote Cache
 # ============
