--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -33,8 +33,9 @@ jobs:
           cat <<EOF > user.bazelrc
           build --bes_results_url=https://app.buildbuddy.io/invocation/
           build --bes_backend=grpcs://remote.buildbuddy.io
-          build --remote_cache=grpcs://remote.buildbuddy.io
-          build --noremote_upload_local_results # Uploads logs & artifacts without writing to cache
+          # XXX: Remote cache is too slow
+          # build --remote_cache=grpcs://remote.buildbuddy.io
+          # build --noremote_upload_local_results # Uploads logs & artifacts without writing to cache
           build --remote_timeout=3600
           build --remote_header=x-buildbuddy-api-key="$BUILDBUDDY_API_KEY"
           EOF
