--- a/examples/basic/BUILD
+++ b/examples/basic/BUILD
@@ -138,6 +138,7 @@ py_image(
 py_test(
     name = "grpc_test",
     srcs = ["grpc_test.py"],
+    flaky = True,
     deps = [
         ":client",
         ":server",
