--- a/buildbuddy.yaml
+++ b/buildbuddy.yaml
@@ -1,5 +1,6 @@
 actions:
   - name: "Build and Test all targets"
+    container_image: "ubuntu-20.04"
     triggers:
       push:
         branches:
