Add a buildbuddy workflow and run flakiness check daily (#97)
On the tin, customize buildbuddy workflow.

The ubuntu version (20.04) is different than what I run (22.04), and
github is using ubuntu-latest (22.04)

Also adds a nightly (3pm UTC, 8am PST atm) run of the flakiness check.

--- a/.github/workflows/flakiness.yml
+++ b/.github/workflows/flakiness.yml
@@ -5,8 +5,12 @@ on:
   push:
     branches:
       - master
+  schedule:
+    # https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#schedule
+    # Run everyday at 15:00 UTC
+    - cron: "0 15 * * *"
 jobs:
-  build_and_test:
+  flaky_finder:
     runs-on: ubuntu-latest
     steps:
       - run: echo "The job was triggered by a ${{ github.event_name }} event, running on ${{ runner.os }}, ${{ github.ref }} @ ${{ github.repository }}."
