--- a/.github/workflows/upgrade-dependencies.yml
+++ b/.github/workflows/upgrade-dependencies.yml
@@ -1,6 +1,8 @@
 name: Upgrade Dependencies
 run-name: ${{ github.actor }} is upgrading dependencies
 on:
+  # XXX: Remove
+  pull_request:
   workflow_dispatch:
   schedule:
     # https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#schedule
