--- a/.github/workflows/flakiness.yml
+++ b/.github/workflows/flakiness.yml
@@ -20,6 +20,7 @@ jobs:
           buildbuddy_api_key: ${{ secrets.BUILDBUDDY_API_KEY }}
       - name: Test Flakiness
         run: |
-          # Run several times to identify flakiness, but avoid large tests
-          bazel test --runs_per_test_detects_flakes --runs_per_test=5  -- //... -//:requirements_test
+          # Run several times to identify flakiness, but avoid enormous tests
+          # Can find them with: `bazel query 'attr(size, enormous, //...)'`
+          bazel test --runs_per_test_detects_flakes --runs_per_test=5  -- //... --test_size_filters=-enormous
       - run: echo "Status is ${{ job.status }}."
