--- a/.bazelrc
+++ b/.bazelrc
@@ -138,6 +138,15 @@ build --remote_timeout=3600
 # build --remote_header=x-buildbuddy-api-key="$BUILDBUDDY_API_KEY"
 
 
+# Python Type Checking - mypy
+#############################
+
+# register mypy_aspect with Bazel
+build --aspects //tools:aspects.bzl%mypy_aspect
+
+# optionally, default enable the mypy checks
+build --output_groups=+mypy
+
 # Allow user to extend .bazelrc
 # https://bazel.build/configure/best-practices#bazelrc-file
 #
