--- a/tools/BUILD
+++ b/tools/BUILD
@@ -1,4 +1,6 @@
+load("@pip//:requirements.bzl", "requirement") # '@pip' must match configured pip hub_name
 load("@rules_multirun//:defs.bzl", "command", "multirun")
+load("@rules_mypy//mypy:mypy.bzl", "mypy_cli")
 load("//bzl:py.bzl", "py_binary", "py_library")
 
 package(default_visibility = ["//visibility:private"])
@@ -88,4 +90,12 @@ py_binary(
     name = "coverage_baseline",
     srcs = ["coverage_baseline.py"],
     visibility = ["//:__subpackages__"],
+)
+
+mypy_cli(
+    name = "mypy_cli",
+    mypy_requirement = requirement("mypy"),
+    deps = [
+        "@pip//types_protobuf",
+    ],
 )
