--- a/examples/pigweed/tools/BUILD
+++ b/examples/pigweed/tools/BUILD
@@ -12,4 +12,5 @@ py_binary(
         "//examples/pigweed/modules/blinky:blinky_pb2",
         "@pigweed//pw_system/py:pw_system_lib",
     ],
+    tags = ["no-mypy"],
 )
