--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,8 @@
 [mypy]
 follow_imports = silent
 follow_imports_for_stubs = True
-exclude = (pb2\.py$|^external)
+# XXX: None of these seem to work
+# exclude = (pb2\.py$|^external)
 # exclude = (?x)(
 #     ^external/
 #     | pb2\.py$
