--- a/apps/BUILD
+++ b/apps/BUILD
@@ -2,6 +2,13 @@ load("//bzl:py.bzl", "py_binary")
 
 package(default_visibility = ["//visibility:private"])
 
+filegroup(
+  name = "python_source",
+  srcs = glob(["*.py"]) + [
+  ],
+  visibility = ["//visibility:public"],
+)
+
 py_binary(
     name = "bazel_parser",
     srcs = ["bazel_parser.py"],
