--- a/docs/BUILD
+++ b/docs/BUILD
@@ -1,3 +1,4 @@
+load("//bzl:py.bzl", "py_library")
 load("//tools/sphinx:sphinx.bzl", "sphinx_html")
 
 filegroup(
@@ -7,16 +8,23 @@ filegroup(
 
 sphinx_html(
     name = "docs",
-    config = "conf.py",
-    index = "index.rst",  # Test non-canonical naming.
     srcs = [
         "hello.rst",
         "myst.md",
         # has warnings
         # "myst_extensions.md",
         "examples.md",
-        "example.py",
         "//:python_source",
         ":templates",
     ],
+    config = "conf.py",
+    index = "index.rst",  # Test non-canonical naming.
+)
+
+package(default_visibility = ["//visibility:private"])
+
+py_library(
+    name = "conf",
+    srcs = ["conf.py"],
+    visibility = ["//:__subpackages__"],
 )
