--- a/.bazelrc
+++ b/.bazelrc
@@ -129,9 +129,9 @@ common --experimental_profile_include_primary_output
 # ==================
 # TODO(#95): Reconsider nativelink remote caching
 # TODO(#96): Consider only enabling BES for github jobs
-# build --bes_results_url=https://app.buildbuddy.io/invocation/
-# build --bes_backend=grpcs://remote.buildbuddy.io
-# build --remote_cache=grpcs://remote.buildbuddy.io
+build --bes_results_url=https://app.buildbuddy.io/invocation/
+build --bes_backend=grpcs://remote.buildbuddy.io
+build --remote_cache=grpcs://remote.buildbuddy.io
 build --remote_download_toplevel # Helps remove network bottleneck if caching is enabled
 build --remote_timeout=3600
 # Specify this in your user.bazelrc
