--- a/docs/BUILD
+++ b/docs/BUILD
@@ -6,6 +6,11 @@ filegroup(
     srcs = glob(["_templates/**/*.rst"]),
 )
 
+filegroup(
+    name = "static",
+    srcs = glob(["_static/**/*.png"]),
+)
+
 sphinx_html(
     name = "docs",
     srcs = [
@@ -16,15 +21,10 @@ sphinx_html(
         "examples.md",
         "//:python_source",
         ":templates",
+        ":static",
     ],
     config = "conf.py",
     index = "index.rst",  # Test non-canonical naming.
 )
 
 package(default_visibility = ["//visibility:private"])
-
-py_library(
-    name = "conf",
-    srcs = ["conf.py"],
-    visibility = ["//:__subpackages__"],
-)
