--- a/docs/BUILD
+++ b/docs/BUILD
@@ -1,6 +1,8 @@
 load("//bzl:py.bzl", "py_library")
 load("//tools/sphinx:sphinx.bzl", "sphinx_html")
 
+package(default_visibility = ["//visibility:private"])
+
 filegroup(
     name = "templates",
     srcs = glob(["_templates/**/*.rst"]),
@@ -17,7 +19,7 @@ sphinx_html(
         "hello.rst",
         "myst.md",
         # has warnings
-        # "myst_extensions.md",
+        "myst_extensions.md",
         "examples.md",
         "//:python_source",
         ":templates",
@@ -27,4 +29,9 @@ sphinx_html(
     index = "index.rst",  # Test non-canonical naming.
 )
 
-package(default_visibility = ["//visibility:private"])
+py_library(
+    name = "conf",
+    srcs = ["conf.py"],
+    visibility = ["//:__subpackages__"],
+    deps = ["@pip//sphinx_rtd_theme"],
+)
