--- a/tools/sphinx/BUILD
+++ b/tools/sphinx/BUILD
@@ -1,15 +1,10 @@
 load("//bzl:py.bzl", "py_binary")
 
+package(default_visibility = ["//visibility:private"])
+
 py_binary(
     name = "sphinx_build_wrapper",
     srcs = ["sphinx_build_wrapper.py"],
     visibility = ["//visibility:public"],
-    deps = ["@pip//sphinx",
-            "@pip//sphinx_rtd_theme",
-            "@pip//myst_parser",
-            "@pip//sphinxcontrib_mermaid",
-            "@pip//sphinx_autoapi",
-    ],
+    deps = ["@pip//sphinx"],
 )
-
-package(default_visibility = ["//visibility:private"])
