--- a/tools/sphinx/BUILD
+++ b/tools/sphinx/BUILD
@@ -6,5 +6,12 @@ py_binary(
     name = "sphinx_build_wrapper",
     srcs = ["sphinx_build_wrapper.py"],
     visibility = ["//visibility:public"],
-    deps = ["@pip//sphinx"],
+    deps = [
+        "@pip//sphinx",  # keep
+        "@pip//sphinx_autoapi",  # keep
+        "@pip//sphinx_rtd_theme",  # keep
+        "@pip//sphinxcontrib_mermaid",  # keep
+        "@pip//linkify_it_py",  # keep
+        "@pip//myst_parser",  # keep
+    ],
 )
