--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -262,3 +262,6 @@ archive_override(
         "https://github.com/bazelbuild/rules_cc/archive/1acf5213b6170f1f0133e273cb85ede0e732048f.zip",
     ],
 )
+
+# googleapis
+bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
