--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,6 +5,6 @@ build:
     nodejs: "20"
   commands:
     - go install github.com/bazelbuild/bazelisk@latest
-    - `go env GOPATH`/bin/bazelisk build //docs:docs
+    - $HOME/go/bin/bazelisk build //docs:docs
     - mkdir --parents $READTHEDOCS_OUTPUT/html/
     - cp --recursive bazel-bin/docs/docs_html/* $READTHEDOCS_OUTPUT/html/
