Reduce requirements.in

--- a/requirements.in
+++ b/requirements.in
@@ -26,6 +26,7 @@ linkify-it-py
 sphinxcontrib-mermaid
 # - python code (parse, not executing)
 sphinx-autoapi
+# - lots of miscellaneous plugins for sphinx
 sphinx-design
 sphinx-copybutton
 sphinxext-rediraffe
@@ -33,4 +34,3 @@ sphinxext-opengraph
 sphinx-pyscript
 sphinx-tippy
 sphinx-togglebutton
-sphinx-book-theme
