Add Documentation HTML Generation with Sphinx (#114)
## Description

Followed many twists and turns, but have documentation being generated
and published to https://michael-christen.github.io/toolbox/ !

Changes were largely based around getting an initial doc tree setup,
configuring various plugins, and getting published.
- Configuring doc generation to work with bazel by exporting ALL
python_sources as a secondary set of files via `filegroup`s. I'm not a
huge fan of this / prevents usage of the existing `py_*` targets and in
general the cache gets invalidated fairly easily.
- Pulled a random icon of a wrench from
https://www.flaticon.com/free-icon/wrench_4449037
- Vendored the autoapi templates for control over generated
documentation
- Working around a summary issue by modifying the autoapi templates:
  - https://bylr.info/articles/2022/05/10/api-doc-with-sphinx-autoapi/
  - https://github.com/readthedocs/sphinx-autoapi/issues/298
- add `publish-docs` workflow to publish docs when committing to master
- fixed a `.gitignore` of the `build/` directory
- added a bunch of sphinx dependencies
- vendored in
https://github.com/agoessling/rules_sphinx/tree/3280f704d048dd85400334f7513d0ce11bcdc5f3
to build doc html with bazel

We're using a few tools:
- https://github.com/peaceiris/actions-gh-pages for publishing to github
pages
- readthedocs is a nice alternative that could get us mutliple version
support: https://app.readthedocs.org/projects/mchristen-toolbox &
https://docs.readthedocs.io/en/stable/builds.html (though I wasn't able
to get the bazel build working, I think I need to install go as a system
dependency, then bazelisk with that, tbd)
- https://myst-parser.readthedocs.io/en/latest/ is a pretty neat
extension to sphinx that allows you to write most of your documentation
in markdown, I've added a few examples for now
- for documenting python docstrings we've got:
https://github.com/readthedocs/sphinx-autoapi which is a defini

--- a/examples/basic/BUILD
+++ b/examples/basic/BUILD
@@ -7,6 +7,15 @@ load("//bzl:py.bzl", "grpc_py_library", "proto_py_library", "py_binary", "py_ima
 
 package(default_visibility = ["//visibility:private"])
 
+filegroup(
+    name = "python_source",
+    srcs = glob(["*.py"]) + [
+        "hello_pb2.py",
+        "hello_pb2_grpc.py",
+    ],
+    visibility = ["//visibility:public"],
+)
+
 proto_library(
     name = "hello_proto",
     srcs = ["hello.proto"],
