--- a/examples/bazel/BUILD
+++ b/examples/bazel/BUILD
@@ -4,6 +4,13 @@ load(":my_rules_test.bzl", "my_rules_test_suite")
 
 package(default_visibility = ["//visibility:private"])
 
+filegroup(
+    name = "python_source",
+    srcs = glob(["*.py"]) + [
+    ],
+    visibility = ["//visibility:public"],
+)
+
 my_rules_test_suite(name = "my_rules_test")
 
 # Define constraints to select our toolchain
