--- a/docs/common/BUILD
+++ b/docs/common/BUILD
@@ -3,3 +3,5 @@ filegroup(
     srcs = glob(["*.md"]),
     visibility = ["//:__subpackages__"],
 )
+
+package(default_visibility = ["//visibility:private"])
